--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<description>Maven Web Project for Java Project</description>
 
 	<organization>
-		<name>Mithun Technologies</name>
-		<url>http://mithuntechnologies.com/</url>
+		<name>NARAYANA COLLEGE</name>
+		<url>http://narayana.com/</url>
 	</organization>
 
 	<properties>
@@ -97,13 +97,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
+	      <name>narayana Releases Nexus Repository</name>
 	      <url>http://3.108.215.238:8081/repository/narayana-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <name>narayana Snapshot Nexus Repository </name>
 	      <url>http://3.108.215.238:8081/repository/narayana-snapshot/</url>
 	    </snapshotRepository>
 	    
